# ml-algorithm-playground

./: README.md  pyproject.toml
data/: README.md
notebooks/: ML_Coding_KNN.ipynb  ML_Coding_Kmeans.ipynb  ML_Coding_LinearRegression.ipynb  ML_Coding_Logistic_regression.ipynb  ML_Coding_MultmodalNativeBayes.ipynb  ML_coding_DecisionTree.ipynb
src/ml_algorithm_playground/clustering/: kmeans.py
src/ml_algorithm_playground/linear/: linear_regression.py  logistic_regression.py  naive_bayes.py
src/ml_algorithm_playground/neighbors/: kmeans.py  knn.py
src/ml_algorithm_playground/utils/: data_generation.py  random.py
tests/: test_linear_regression.py  test_logistic_regeression.py
