[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-algorithm-playground"
version = "0.0.1"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A playground for machine learning algorithms."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24.4",
]

[project.urls]
"Homepage" = "https://github.com/EricWu23/ml-algorithm-playground"
"Bug Tracker" = "https://github.com/EricWu23/ml-algorithm-playground/issues"

[project.optional-dependencies]
notebooks = [
    "ipykernel>=6.29.5",
    "pandas>=3.0.0",
    "scikit-learn"
]
dev = [
    "pytest>=8.3.5",
]

[tool.setuptools.packages.find]
where = ["src"]  # Search for packages in the 'src' directory
